--- a/testing_CV.tex
+++ b/testing_CV.tex
@@ -85,7 +85,7 @@ University College London}
 Address for Correspondence: 1-19 Torrington Pl, London WC1E 7HB, United
 Kingdom
 
-Version: October 21 2022
+Version: November 30 2022
 
 \hypertarget{overview}{%
 \subsubsection{Overview}\label{overview}}
@@ -111,7 +111,7 @@ on young people and families.
 I am 48 years old, a husband and father of three daughters. I row
 competitively on Concept2 and read hard-copy books.
 
-My h-index = 56 and here is a
+My h-index = 57 and here is a
 \href{https://pubmed.ncbi.nlm.nih.gov/?term=stringaris+a\&sort=date}{list
 of my publications} and here is my
 \href{https://scholar.google.com/citations?user=9B82424AAAAJ\&hl=en\&oi=ao}{Google
@@ -121,8 +121,8 @@ Scholar page}.
 \subsubsection{Current Positions}\label{current-positions}}
 
 \textbf{Professor of Child and Adolescent Psychiatry}\\
-Department of Psychiatry and Department of Clinical, Educational \&
-Health Psychology University College London
+Division of Psychiatry and Department of Clinical, Educational \& Health
+Psychology University College London
 
 \hypertarget{other-positions}{%
 \subsubsection{Other positions}\label{other-positions}}
@@ -272,46 +272,31 @@ Islington NHS Foundation Trust
 \end{itemize}
 
 \textbf{Taskforce and Scientific Board Memberships} I have been invited
-to participate as a member or scientific advisor in the following:
+to participate as a member or scientific advisor in the following: -
+Member of the European College of Neuropharmacology (ECNP) Child and
+Adolescent Psychiatry Network. - Member Scientific Advisory Group of
+Improving Adolescent mentaL health by reducing the Impact of PoVErty
+(ALIVE), a Wellcome trust-funded international project. - Scientific
+Board European Society of Child and Adolescent Psychiatry (ESCAP) -
+Member of European ADHD Guidelines Group (EAGG) - Member of the American
+Academy of Child and Adolescent Psychiatry Presidential Initiative Task
+Force on Emotion Regulation in Children : ``Coming Together to Treat the
+Sickest Kids''- I was appointed chair of the Measurement Subcommittee -
+Member of the Program Committee for the American Academy of Child and
+Adolescent Psychiatry (AACAP) Annual meeting 2021 - Scientific Advisory
+Board MQ The Mental Health Charity, UK - Member of the Task Force on
+Child and Youth Psychiatry of the World Federation of Societies of
+Biological Psychiatry (WFSBP) - Scientific Advisory Board Advisory Board
+for the Medical Research Council UK initiative in Adolescence, Mental
+Health and the Developing Mind
+
+\hypertarget{prizes-and-distinctions}{%
+\subsubsection{Prizes and Distinctions}\label{prizes-and-distinctions}}
 
 \begin{itemize}
 \tightlist
 \item
-  Member of the European College of Neuropharmacology (ECNP) Child and
-  Adolescent Psychiatry Network.
-\item
-  Member Scientific Advisory Group of Improving Adolescent mentaL health
-  by reducing the Impact of PoVErty (ALIVE), a Wellcome trust-funded
-  international project.
-\item
-  Scientific Board European Society of Child and Adolescent Psychiatry
-  (ESCAP)
-\item
-  Member of European ADHD Guidelines Group (EAGG)
-\item
-  Member of the American Academy of Child and Adolescent Psychiatry
-  Presidential Initiative Task Force on Emotion Regulation in Children :
-  ``Coming Together to Treat the Sickest Kids''- I was appointed chair
-  of the Measurement Subcommittee
-\item
-  Member of the Program Committee for the American Academy of Child and
-  Adolescent Psychiatry (AACAP) Annual meeting 2021
-\item
-  Scientific Advisory Board MQ The Mental Health Charity, UK
-\item
-  Member of the Task Force on Child and Youth Psychiatry of the World
-  Federation of Societies of Biological Psychiatry (WFSBP)
-\item
-  Scientific Advisory Board Advisory Board for the Medical Research
-  Council UK initiative in Adolescence, Mental Health and the Developing
-  Mind
-\end{itemize}
-
-\hypertarget{prizes}{%
-\subsubsection{Prizes}\label{prizes}}
-
-\begin{itemize}
-\tightlist
+  2022 Highly Cited Researcher Clarivate Analytics
 \item
   2021 Open Neuro Hall of Fame, tied 2nd Place for contributing datasets
 \item
@@ -495,6 +480,31 @@ of Symposia
 \hypertarget{grants}{%
 \subsubsection{Grants}\label{grants}}
 
+-Title:Surprises as a Mechanism of Improvement in the Psychological
+Therapy of Anxiety and Depression in Young People\\
+Position: PI Funding Body: Wellcome Trust Amount:£3,015,694.19 Outcome:
+pending
+
+-Title: How does the SSRI fluoxetine work in adolescent depression?\\
+Position: Co-I and site PI (overall PI Prof Harmer London)\\
+Funding Body: Wellcome Trust\\
+Amount:£2,570,720.00\\
+Outcome: pending
+
+\begin{verbatim}
+ -Title:NIHR/HTA 22/88 Repetitive Transcranial Magnetic Stimulation for depression in adolescents 
+\end{verbatim}
+
+Position: Co-I and site PI (overall PI Dr Rogers, Birmingham)\\
+Funding Body: National Institute of Health Research Amount:£118,139.74
+Outcome: pending
+
+-Title: Amending and Upgrading Guidance for boosting MENTal health in
+young people (AUGMENT)\\
+Position: Co-I and site PI (overall PI Prof Buitelaar Nijmegen)\\
+Funding Body: European Union, Horizon 2020 Amount:£405,104.33 Outcome:
+pending
+
 \begin{itemize}
 \item
   Title: 4M: Microbes, Milk, Mental Health and Me; how do early life gut
@@ -663,7 +673,11 @@ Outstanding Mentor Award by the National Institutes of Mental Health
   College London.
 \end{itemize}
 
-\textbf{MSc Students}
+\textbf{Doctoral Students} I currently supervise two Psychology Doctoral
+Students
+
+\textbf{MSc Students} I supervise students for the UCL Child and
+Adolescent Mental Health course
 
 I have mentored between 2009-2015 nine MSc students for the course in
 Child and Adolescent Psychiatry at King's College London. Many of them
@@ -679,15 +693,23 @@ several of them joining prestigious courses in medicine in the US
 (e.g.~Ms Lisa Gorham, Washington University at St Louis), Clinical
 Psychology or Psychology courses (e.g.~Mr Chris Camp, Yale University).
 
+\textbf{Undergraduate Stduent}
+
+I supervise students for the Psychology BSc and am mentor to another two
+students
+
 \hypertarget{taught-courses-and-other-supervision}{%
 \subsubsection{Taught Courses and other
 Supervision}\label{taught-courses-and-other-supervision}}
 
 \begin{itemize}
 \item
-  Exam marker at UCL's Depression and Anxiety MSc module
+  Lecturer for the UCL Child and Adolescent Mental Health MSc course
 \item
-  Lecturer at UCL's Child and Adolescent Mental Health MSc
+  Lecturer for the UCL Child and Adolescent Mental Health Module of MSc
+  Psychiatry course
+\item
+  Exam marker at UCL's Depression and Anxiety MSc module
 \item
   Dissertation Supervisor at UCL's Child and Adolescent Mental Health
   MSc
@@ -854,14 +876,14 @@ University Press\tabularnewline
 \begin{longtable}[]{@{}rl@{}}
 \toprule
 \endhead
-1 & Prabhakar J, Nielson DM, Stringaris (2022) Origins of Anhedonia in
-Childhood and Adolescence,In Pizzagali D (Ed) Current Topics in
-Behavioural Neuroscience. Springer\tabularnewline
-2 & O'Callaghan, G. \& Stringaris, A (2019) Reward Processing in
-Adolescent Depression. In C Harmer \& T. Baune (Eds.) Cognitive
+1 & Prabhakar J, Nielson DM, \textbf{Stringaris} (2022) Origins of
+Anhedonia in Childhood and Adolescence,In Pizzagali D (Ed) Current
+Topics in Behavioural Neuroscience. Springer\tabularnewline
+2 & O'Callaghan, G. \& \textbf{Stringaris }, A (2019) Reward Processing
+in Adolescent Depression. In C Harmer \& T. Baune (Eds.) Cognitive
 Dimensions of Major Depressive Disorder, Oxford University
 Press\tabularnewline
-3 & Stringaris, A., \& Vidal-Ribas, P. (2018). Disruptive Mood
+3 & \textbf{Stringaris }, A., \& Vidal-Ribas, P. (2018). Disruptive Mood
 Dysregulation Disorder. In M. Ebert, J. Leckman \& I. Petrakis (Eds.),
 Current Diagnosis \& Treatment Psychiatry (Third ed.): Lange Medical
 Books/McGraw-Hill.\tabularnewline
@@ -898,16 +920,15 @@ Ed. Hogan PC. New York: Cambridge University Press.\tabularnewline
 \bottomrule
 \end{longtable}
 
-\textbf{Publications as Preprints}
+\textbf{Publications accepted}
 
 \begin{longtable}[]{@{}rl@{}}
 \toprule
 \endhead
 1 & Jangraw DC, Keren H, Bedder RL, Rutledge RB, Perreira F, Thomas
-AG,Pine DS, Zheng C, Nielson, DM , \textbf{Stringaris} A (2021)
-Passage-of-Time Dysphoria: A Highly Replicable Decline in Mood During
-Rest and Simple Tasks that is Moderated by Depression, Psyarxiv
-preprint\tabularnewline
+AG,Pine DS, Zheng C, Nielson, DM , \textbf{Stringaris} A (2021) A Highly
+Replicable Decline in Mood During Rest and Simple Tasks, \emph{Nature
+Human Behaviour}\tabularnewline
 \bottomrule
 \end{longtable}
 
